<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">POMS Visual Scale</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="text_def">请拖动滑条</string>
    <string name="text_self">请拖动滑条</string>
    

    
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
     <string name="subject_information">被试信息</string>
      <string name="subject_name">姓名：</string>
      <string name="subject_ID">ID:</string>
      <string name="name_hint">请输入姓名</string>
      <string name="ID_hint">请输入患者编号</string>
       <string name="experimenter_information">主试信息</string>
        <string name="experiment_type">实验类型</string>
         <string name="information_save">信息保存</string>
          <string name="experiment_cancle">退出</string>
       
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="connection_all">connect all .</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
    <string-array name="spingarr">
        <item>multimode</item>
        
        </string-array>
        </resources>
    

